<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        app:showAsAction="always"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        />
    <item
        android:id="@+id/search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        />
    <item
        android:id="@+id/category"
        app:showAsAction="always"
        android:icon="@drawable/ic_shopping"
        android:title="@string/menu_category"
        />
    <item
        android:id="@+id/favorite"
        app:showAsAction="always"
        android:icon="@drawable/ic_favorites"
        android:title="@string/menu_fav"
        />
    <item
        android:id="@+id/profile"
        app:showAsAction="always"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"
        />
</menu>