<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_4dp"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_shopping"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            app:cardCornerRadius="@dimen/dimen_6dp"
            app:cardElevation="@dimen/dimen_0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_shopping_item">

                <ImageView
                    android:id="@+id/iv_shopping"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="@dimen/dimen_0dp"
                    android:layout_marginStart="@dimen/dimen_1dp"
                    android:layout_marginTop="@dimen/dimen_1dp"
                    android:layout_marginEnd="@dimen/dimen_1dp"
                    android:layout_marginBottom="@dimen/dimen_1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/shopping_item" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:text="Samsung Galaxy A51"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/cv_shopping"
            app:layout_constraintTop_toTopOf="@+id/cv_shopping" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="3,103,000 сум"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <LinearLayout
            android:id="@+id/ln_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/cv_shopping"
            app:layout_constraintStart_toEndOf="@id/cv_shopping">

            <ImageButton
                android:id="@+id/btn_remove"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:background="@drawable/bg_shopping_add_remove_btn"
                android:src="@drawable/ic_remove"
                android:text="-"
                android:textSize="@dimen/dimen_18sp" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/dimen_12dp"
                android:layout_marginEnd="@dimen/dimen_12dp"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_15sp" />

            <ImageButton
                android:id="@+id/btn_add"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:background="@drawable/bg_shopping_add_remove_btn"
                android:src="@drawable/ic_add"
                android:text="+"
                android:textSize="@dimen/dimen_18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <LinearLayout style="@style/amount_liner">

            <TextView
                android:id="@+id/tv_product"
                style="@style/amout_style"
                android:text="@string/product_amount" />

            <TextView
                android:id="@+id/price_product"
                style="@style/amout_style"
                android:gravity="end"
                android:text="3,103,000 сум" />
        </LinearLayout>

        <LinearLayout style="@style/amount_liner"
            android:layout_marginTop="@dimen/dimen_9dp">


        <TextView
                android:id="@+id/tv_delivery"
                style="@style/amout_style"
                android:text="@string/delivery_amount" />

            <TextView
                android:id="@+id/price_delivery"
                style="@style/amout_style"
                android:gravity="end"
                android:text="50,000 сум" />
        </LinearLayout>

        <LinearLayout style="@style/amount_liner"
            android:layout_marginTop="@dimen/dimen_9dp">

            <TextView
                android:id="@+id/total"
                style="@style/amout_style"
                android:text="@string/total_amount" />

            <TextView
                android:id="@+id/price_total"
                style="@style/amout_style"
                android:gravity="end"
                android:text="3,153,000 сум" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>